# serializer version: 1
# name: test_deny_view_for_reasons[IAE][proposed_actions]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress progress--emploi">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" class="progress-bar progress-bar-33" role="progressbar">
                              </div>
                          </div>
                          <p>
                              
                                  <strong>Étape 1</strong> : Motif du refus
                              
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          <h2 class="h4">Réponse envoyée à l'employeur et au candidat</h2>
                          
                              <form method="post">
                                  <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                                  <input id="id_prolongation_request_deny_view-current_step" name="prolongation_request_deny_view-current_step" type="hidden" value="reason"/>
  
                                  <div class="form-group form-group-required"><label>Pour quel motif refusez-vous la prolongation du parcours IAE de John DOE ?</label><div class="radio radio-success" id="id_reason-reason"><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_0"><input checked="" class="form-check-input" id="id_reason-reason_0" name="reason-reason" required="" title="" type="radio" value="IAE"/>
   L’IAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_1"><input class="form-check-input" id="id_reason-reason_1" name="reason-reason" required="" title="" type="radio" value="SIAE"/>
   La typologie de SIAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div>
  </div></div>
  
                                  
                                      <div class="c-info mb-4">
                                          <button aria-controls="legalInformation" aria-expanded="false" class="c-info__summary collapsed" data-target="#legalInformation" data-toggle="collapse" type="button">
                                              <span>Contexte légal</span>
                                          </button>
                                          <div class="c-info__detail collapse" id="legalInformation">
                                              <p>
                                                  Conformément à l’article Art. R. 5132-1-8. du Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, le refus de prolongation d'un prescripteur est motivé par écrit et notifié, par tout moyen donnant date certaine à la réception de cette notification, à la structure et à l'intéressé.
                                              </p>
                                              <a aria-label="En savoir plus concernant le contexte légal" class="btn btn-link px-0" href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043990367" rel="noopener" target="_blank">
                                                  <span>En savoir plus</span>
                                                  <i class="ri-external-link-line ri-lg"></i>
                                              </a>
                                          </div>
                                      </div>
                                  
  
                                  <hr/>
                                  <p class="fs-xs">* champ obligatoire</p>
                                  <div class="form-group">
                                      <div class="text-right">
                                          
                                              <a class="btn btn-link btn-outline-primary" href="/approvals/prolongation/request/666">Annuler</a>
                                          
                                          <button class="btn btn-primary">Suivant</button>
                                      </div>
                                  </div>
                              </form>
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: test_deny_view_for_reasons[IAE][reason]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress progress--emploi">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-50" role="progressbar">
                              </div>
                          </div>
                          <p>
                              
                                  <strong>Étape 1</strong> : Motif du refus
                              
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          <h2 class="h4">Réponse envoyée à l'employeur et au candidat</h2>
                          
                              <form method="post">
                                  <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                                  <input id="id_prolongation_request_deny_view-current_step" name="prolongation_request_deny_view-current_step" type="hidden" value="reason"/>
  
                                  <div class="form-group form-group-required"><label>Pour quel motif refusez-vous la prolongation du parcours IAE de John DOE ?</label><div class="radio radio-success" id="id_reason-reason"><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_0"><input class="form-check-input" id="id_reason-reason_0" name="reason-reason" required="" title="" type="radio" value="IAE"/>
   L’IAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_1"><input class="form-check-input" id="id_reason-reason_1" name="reason-reason" required="" title="" type="radio" value="SIAE"/>
   La typologie de SIAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div>
  </div></div>
  
                                  
                                      <div class="c-info mb-4">
                                          <button aria-controls="legalInformation" aria-expanded="false" class="c-info__summary collapsed" data-target="#legalInformation" data-toggle="collapse" type="button">
                                              <span>Contexte légal</span>
                                          </button>
                                          <div class="c-info__detail collapse" id="legalInformation">
                                              <p>
                                                  Conformément à l’article Art. R. 5132-1-8. du Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, le refus de prolongation d'un prescripteur est motivé par écrit et notifié, par tout moyen donnant date certaine à la réception de cette notification, à la structure et à l'intéressé.
                                              </p>
                                              <a aria-label="En savoir plus concernant le contexte légal" class="btn btn-link px-0" href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043990367" rel="noopener" target="_blank">
                                                  <span>En savoir plus</span>
                                                  <i class="ri-external-link-line ri-lg"></i>
                                              </a>
                                          </div>
                                      </div>
                                  
  
                                  <hr/>
                                  <p class="fs-xs">* champ obligatoire</p>
                                  <div class="form-group">
                                      <div class="text-right">
                                          
                                              <a class="btn btn-link btn-outline-primary" href="/approvals/prolongation/request/666">Annuler</a>
                                          
                                          <button class="btn btn-primary">Suivant</button>
                                      </div>
                                  </div>
                              </form>
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: test_deny_view_for_reasons[IAE][reason_explanation]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress progress--emploi">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" class="progress-bar progress-bar-33" role="progressbar">
                              </div>
                          </div>
                          <p>
                              
                                  <strong>Étape 1</strong> : Motif du refus
                              
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          <h2 class="h4">Réponse envoyée à l'employeur et au candidat</h2>
                          
                              <form method="post">
                                  <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                                  <input id="id_prolongation_request_deny_view-current_step" name="prolongation_request_deny_view-current_step" type="hidden" value="reason"/>
  
                                  <div class="form-group form-group-required"><label>Pour quel motif refusez-vous la prolongation du parcours IAE de John DOE ?</label><div class="radio radio-success" id="id_reason-reason"><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_0"><input checked="" class="form-check-input" id="id_reason-reason_0" name="reason-reason" required="" title="" type="radio" value="IAE"/>
   L’IAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_1"><input class="form-check-input" id="id_reason-reason_1" name="reason-reason" required="" title="" type="radio" value="SIAE"/>
   La typologie de SIAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div>
  </div></div>
  
                                  
                                      <div class="c-info mb-4">
                                          <button aria-controls="legalInformation" aria-expanded="false" class="c-info__summary collapsed" data-target="#legalInformation" data-toggle="collapse" type="button">
                                              <span>Contexte légal</span>
                                          </button>
                                          <div class="c-info__detail collapse" id="legalInformation">
                                              <p>
                                                  Conformément à l’article Art. R. 5132-1-8. du Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, le refus de prolongation d'un prescripteur est motivé par écrit et notifié, par tout moyen donnant date certaine à la réception de cette notification, à la structure et à l'intéressé.
                                              </p>
                                              <a aria-label="En savoir plus concernant le contexte légal" class="btn btn-link px-0" href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043990367" rel="noopener" target="_blank">
                                                  <span>En savoir plus</span>
                                                  <i class="ri-external-link-line ri-lg"></i>
                                              </a>
                                          </div>
                                      </div>
                                  
  
                                  <hr/>
                                  <p class="fs-xs">* champ obligatoire</p>
                                  <div class="form-group">
                                      <div class="text-right">
                                          
                                              <a class="btn btn-link btn-outline-primary" href="/approvals/prolongation/request/666">Annuler</a>
                                          
                                          <button class="btn btn-primary">Suivant</button>
                                      </div>
                                  </div>
                              </form>
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: test_deny_view_for_reasons[IAE][title]
  '''
  <section class="s-title-01">
                      <div class="s-title-01__container container">
                          <div class="s-title-01__row row">
                              <div class="s-title-01__col col-12">
                                  
      <h1>Refuser la demande de prolongation pour John DOE</h1>
  
                              </div>
                          </div>
                      </div>
                  </section>
  '''
# ---
# name: test_deny_view_for_reasons[SIAE][reason]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress progress--emploi">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-50" role="progressbar">
                              </div>
                          </div>
                          <p>
                              
                                  <strong>Étape 1</strong> : Motif du refus
                              
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          <h2 class="h4">Réponse envoyée à l'employeur et au candidat</h2>
                          
                              <form method="post">
                                  <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                                  <input id="id_prolongation_request_deny_view-current_step" name="prolongation_request_deny_view-current_step" type="hidden" value="reason"/>
  
                                  <div class="form-group form-group-required"><label>Pour quel motif refusez-vous la prolongation du parcours IAE de John DOE ?</label><div class="radio radio-success" id="id_reason-reason"><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_0"><input class="form-check-input" id="id_reason-reason_0" name="reason-reason" required="" title="" type="radio" value="IAE"/>
   L’IAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_1"><input class="form-check-input" id="id_reason-reason_1" name="reason-reason" required="" title="" type="radio" value="SIAE"/>
   La typologie de SIAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div>
  </div></div>
  
                                  
                                      <div class="c-info mb-4">
                                          <button aria-controls="legalInformation" aria-expanded="false" class="c-info__summary collapsed" data-target="#legalInformation" data-toggle="collapse" type="button">
                                              <span>Contexte légal</span>
                                          </button>
                                          <div class="c-info__detail collapse" id="legalInformation">
                                              <p>
                                                  Conformément à l’article Art. R. 5132-1-8. du Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, le refus de prolongation d'un prescripteur est motivé par écrit et notifié, par tout moyen donnant date certaine à la réception de cette notification, à la structure et à l'intéressé.
                                              </p>
                                              <a aria-label="En savoir plus concernant le contexte légal" class="btn btn-link px-0" href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043990367" rel="noopener" target="_blank">
                                                  <span>En savoir plus</span>
                                                  <i class="ri-external-link-line ri-lg"></i>
                                              </a>
                                          </div>
                                      </div>
                                  
  
                                  <hr/>
                                  <p class="fs-xs">* champ obligatoire</p>
                                  <div class="form-group">
                                      <div class="text-right">
                                          
                                              <a class="btn btn-link btn-outline-primary" href="/approvals/prolongation/request/666">Annuler</a>
                                          
                                          <button class="btn btn-primary">Suivant</button>
                                      </div>
                                  </div>
                              </form>
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: test_deny_view_for_reasons[SIAE][reason_explanation]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress progress--emploi">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-50" role="progressbar">
                              </div>
                          </div>
                          <p>
                              
                                  <strong>Étape 1</strong> : Motif du refus
                              
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          <h2 class="h4">Réponse envoyée à l'employeur et au candidat</h2>
                          
                              <form method="post">
                                  <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                                  <input id="id_prolongation_request_deny_view-current_step" name="prolongation_request_deny_view-current_step" type="hidden" value="reason"/>
  
                                  <div class="form-group form-group-required"><label>Pour quel motif refusez-vous la prolongation du parcours IAE de John DOE ?</label><div class="radio radio-success" id="id_reason-reason"><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_0"><input class="form-check-input" id="id_reason-reason_0" name="reason-reason" required="" title="" type="radio" value="IAE"/>
   L’IAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div><div class="form-check">
  <label class="form-check-label" for="id_reason-reason_1"><input checked="" class="form-check-input" id="id_reason-reason_1" name="reason-reason" required="" title="" type="radio" value="SIAE"/>
   La typologie de SIAE ne correspond plus aux besoins / à la situation de la personne.</label>
  </div>
  </div></div>
  
                                  
                                      <div class="c-info mb-4">
                                          <button aria-controls="legalInformation" aria-expanded="false" class="c-info__summary collapsed" data-target="#legalInformation" data-toggle="collapse" type="button">
                                              <span>Contexte légal</span>
                                          </button>
                                          <div class="c-info__detail collapse" id="legalInformation">
                                              <p>
                                                  Conformément à l’article Art. R. 5132-1-8. du Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, le refus de prolongation d'un prescripteur est motivé par écrit et notifié, par tout moyen donnant date certaine à la réception de cette notification, à la structure et à l'intéressé.
                                              </p>
                                              <a aria-label="En savoir plus concernant le contexte légal" class="btn btn-link px-0" href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043990367" rel="noopener" target="_blank">
                                                  <span>En savoir plus</span>
                                                  <i class="ri-external-link-line ri-lg"></i>
                                              </a>
                                          </div>
                                      </div>
                                  
  
                                  <hr/>
                                  <p class="fs-xs">* champ obligatoire</p>
                                  <div class="form-group">
                                      <div class="text-right">
                                          
                                              <a class="btn btn-link btn-outline-primary" href="/approvals/prolongation/request/666">Annuler</a>
                                          
                                          <button class="btn btn-primary">Suivant</button>
                                      </div>
                                  </div>
                              </form>
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: test_deny_view_for_reasons[SIAE][title]
  '''
  <section class="s-title-01">
                      <div class="s-title-01__container container">
                          <div class="s-title-01__row row">
                              <div class="s-title-01__col col-12">
                                  
      <h1>Refuser la demande de prolongation pour John DOE</h1>
  
                              </div>
                          </div>
                      </div>
                  </section>
  '''
# ---
# name: test_list_view
  '''
  <div class="c-box">
                          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between">
                              <h3 class="mb-0">1 résultat</h3>
                          </div>
                          <div class="d-flex flex-column flex-md-row mt-3 mt-md-4">
                              <h4 class="mr-4">Filtres :</h4>
                              <form action="/approvals/prolongation/requests" hx-boost="true" hx-trigger="change">
                                  <input id="id_only_pending" name="only_pending" type="checkbox"/>
                                  <label for="id_only_pending">Voir uniquement les demandes à traiter</label>
                              </form>
                          </div>
  
                          <div class="table-responsive-lg mt-3 mt-md-4">
                              <table class="table">
                                  <caption class="sr-only">Liste des prolongations de PASS IAE</caption>
                                  <thead>
                                      <tr>
                                          <th scope="col">#</th>
                                          <th scope="col">Salarié</th>
                                          <th scope="col">Numéro de PASS IAE</th>
                                          <th scope="col">Structure</th>
                                          <th scope="col">Demandée le</th>
                                          <th scope="col">
                                              Adressée à
                                              <i class="ri-information-line text-info" data-toggle="tooltip" title="En cas d’absence du prescripteur sollicité, vous pouvez traiter cette demande."></i>
                                          </th>
                                          <th scope="col">Statut</th>
                                          <th scope="col">Action</th>
                                      </tr>
                                  </thead>
                                  <tbody>
                                      
                                          <tr>
                                              <th scope="row">1</th>
                                              <td class="font-weight-bold">John DOE</td>
                                              <td><span>99999</span><span class="ml-1">99</span><span class="ml-1">99999</span></td>
                                              <td>ACME Inc.</td>
                                              <td>01/01/2000</td>
                                              <td>John DOE</td>
                                              <td>
      
          <span class="badge badge-xs badge-pill badge-accent-03 text-primary">À traiter</span>
      
  
  </td>
                                              <td>
                                                  <a class="btn btn-link btn-outline-primary btn-sm" href="/approvals/prolongation/request/666">
                                                      
                                                          Traiter
                                                      
                                                  </a>
                                              </td>
                                          </tr>
                                      
                                  </tbody>
                              </table>
                          </div>
  
                          
  
  
  
                      </div>
  '''
# ---
# name: test_show_view
  '''
  <div class="c-box mb-3 mb-lg-5">
                          <h2>Détail de la demande</h2>
                          <hr/>
                          <h3>
                              Adressé à
                              <i class="ri-information-line ri-xl" data-toggle="tooltip" title="En cas d’absence du prescripteur sollicité, vous pouvez traiter cette demande."></i>
                          </h3>
                          <p>John DOE a été sollicité pour cette demande.</p>
                          <h3>Date de fin de PASS IAE demandée : 31/01/2000</h3>
                          <p>
                              La prolongation est demandée pour une durée de 30 jours.
                          </p>
                          <h3>Motif sélectionné par l’employeur</h3>
                          <p>50 ans et plus</p>
                          
                              <h3>Bilan des actions réalisées</h3>
                              <p>
                                  Le bilan des actions réalisées et actions prévues avec le salarié, rempli par l’employeur est présent sur le document excel téléchargeable ci-dessous.
                              </p>
                              <p>
                                  <a class="btn btn-secondary btn-ico" download="Bilan prolongation PASS IAE 999999999999 John DOE.xlsx" href="https://None/None/f0r_5n4p5h07">
                                      <i class="ri-download-line ri-lg font-weight-normal"></i>
                                      <span>Télécharger le bilan</span>
                                  </a>
                              </p>
                          
                          
                              <h3>Explications supplémentaires</h3>
                              <p>
                                  L’employeur a fait une demande d'entretien téléphonique pour vous apporter des explications supplémentaires pour cette prolongation. Voici ses coordonnées :
                              </p>
                              <p>
                                  <i class="ri-mail-line"></i>
                                  <a class="btn-link mr-3" href="mailto:email@example.com">email@example.com</a>
                                  <button class="js-copy-to-clipboard btn btn-ico btn-secondary" data-copy-to-clipboard="email@example.com" data-original-title="Copié !" data-placement="top" data-toggle="tooltip" data-trigger="manual">
      <i class="ri-file-copy-line ri-lg font-weight-normal"></i>
      <span>Copier</span>
  </button>
  
                              </p>
                              <p>
                                  <i class="ri-phone-line"></i>
                                  <a class="btn-link" href="tel:+33123456789">+33123456789</a>
                              </p>
                          
                      </div>
  '''
# ---
# name: test_template_status_card[DENIED]
  '''
  <div class="c-card card rounded-lg mb-3 mb-lg-5">
      <div class="card-body">
          
              <div class="card-title">
                  <h4>Pas de prolongation du PASS IAE</h4>
              </div>
              <div class="card-text">
                  <p class="mb-2">
                      Demande refusée le 01 janvier 2000 par John DOE
                  </p>
              </div>
          
      </div>
  </div>
  
  '''
# ---
# name: test_template_status_card[GRANTED]
  '''
  <div class="c-card card rounded-lg mb-3 mb-lg-5">
      <div class="card-body">
          
              <div class="card-title">
                  <h4>Prolongation du PASS IAE jusqu’au 31/01/2000</h4>
              </div>
              <div class="card-text">
                  <p class="mb-2">
                      Demande acceptée le 01 janvier 2000 par John DOE
                  </p>
              </div>
          
      </div>
  </div>
  
  '''
# ---
# name: test_template_status_card[PENDING]
  '''
  <div class="c-card card rounded-lg mb-3 mb-lg-5">
      <div class="card-body">
          
              <div class="card-title">
                  <h4>Prolonger le PASS IAE jusqu’au 31/01/2000</h4>
              </div>
              <div class="card-text">
                  <form method="post" action="/approvals/prolongation/request/666/grant">
                      
                      <button class="btn btn-primary btn-block btn-ico justify-content-center">
                          <i class="ri-check-line"></i>
                          <span>Accepter</span>
                      </button>
                  </form>
                  <a class="btn btn-outline-primary btn-block btn-ico mt-3 justify-content-center" href="/approvals/prolongation/request/666/deny?reset=1">
                      <i class="ri-close-line"></i>
                      <span>Refuser</span>
                  </a>
                  <p class="font-weight-bold mt-3">Précision</p>
                  <p class="mb-2">En cas de refus, vous êtes tenu de proposer une solution au candidat.</p>
              </div>
          
      </div>
  </div>
  
  '''
# ---
